--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,12 +1,19 @@
 <ion-view view-title="Profile">
+
    <ion-nav-buttons side="right">
      <div class="dh-relative">
-       <button class="button button-icon ln-bell small-icon btn-view" ng-controller="YourBalCtrl" ng-click="pullrefresh();"></button>
+       <button class="button button-icon ln-bell small-icon btn-view" ng-click="pullrefresh();"></button>
        <span class="badge badge-assertive btn-set span-abs"></span>
      </div>
+
       <a class="button button-icon ion-edit small-icon" ng-click="editpro(profile);" href="#/app/profile/edit"></a>
    </ion-nav-buttons>
+
    <ion-content class="padding">
+     <ion-refresher
+    pulling-text="Pull to refresh..."
+    on-refresh="pullrefresh()">
+  </ion-refresher>
            <!-- <ion-refresher pulling-text="Pull To Refresh" on-refresh="pullrefresh();" refreshing-text="Refreshing.."></ion-refresher> -->
       <div class="incard">
          <div class="profile-img">
