--- a/www/templates/selling.html
+++ b/www/templates/selling.html
@@ -7,6 +7,10 @@
 
   </ion-nav-buttons>
     <ion-content class="padding">
+      <ion-refresher
+     pulling-text="Pull to refresh..."
+     on-refresh="pullrefresh()">
+   </ion-refresher>
         <div class="incard" ng-if="req.length==0">
             <div class="list">
                 <div class="text-center royal padding">
