--- a/www/templates/transaction.html
+++ b/www/templates/transaction.html
@@ -7,6 +7,10 @@
 
   </ion-nav-buttons>
    <ion-content class="searcher">
+     <ion-refresher
+    pulling-text="Pull to refresh..."
+    on-refresh="pullrefresh()">
+  </ion-refresher>
       <div class="button-bar bar-balanced transbtn">
          <div class="button" ng-class="purchased" ng-click="changepurchase();">
             Trade Value
