--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -54,7 +54,7 @@
                    <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.notification" >
                          <i class="icon ln-bell side-menu-i"></i>
                     Notification
-  <span ng-hide="approvalcount==0" class="badge badge-balanced">{{approvalcount}}</span>
+  <span ng-hide="notificationCount==0" class="badge badge-balanced"  ng-controller="YourBalCtrl" >{{notificationCount}}</span>
                 </ion-item>
                 <ion-item nav-clear menu-close ui-sref-active="actives" ui-sref="app.about">
                       <i class="icon ln-clipboard side-menu-i"></i>
