--- a/www/templates/events.html
+++ b/www/templates/events.html
@@ -1,8 +1,11 @@
 <ion-view view-title="Events">
   <ion-nav-buttons side="right">
-    <div class="dh-relative">
-      <button class="button button-icon ln-bell small-icon btn-view" ng-controller="YourBalCtrl" ng-click="pullrefresh();"></button>
-      <span class="badge badge-assertive btn-set span-abs"></span>
+    <div class="buttons button-right">
+      <div class="dh-relative" ng-controller="YourBalCtrl">
+        <button class="button button-icon ln-bell small-icon btn-view" ng-click="pullrefresh();"></button>
+        <span class="badge badge-assertive btn-set span-abs" ng-hide="notificationCount==0"></span>
+      </div>
+        <button class="button button-icon ion-ios-loop-strong small-icon" ng-click="pullrefresh();"></button>
     </div>
 
   </ion-nav-buttons>
