--- a/www/templates/myproducts.html
+++ b/www/templates/myproducts.html
@@ -1,8 +1,11 @@
 <ion-view view-title="My Products">
     <ion-nav-buttons side="right">
-      <div class="dh-relative">
-        <button class="button button-icon ln-bell small-icon btn-view" ng-controller="YourBalCtrl" ng-click="pullrefresh();"></button>
-        <span class="badge badge-assertive btn-set span-abs"></span>
+      <div class="buttons button-right">
+        <div class="dh-relative" ng-controller="YourBalCtrl">
+          <button class="button button-icon ln-bell small-icon btn-view" ng-click="pullrefresh();"></button>
+          <span class="badge badge-assertive btn-set span-abs" ng-hide="notificationCount==0"></span>
+        </div>
+          
       </div>
         <button class="button button-icon ion-plus-round small-icon" ng-click="openedit();"></button>
     </ion-nav-buttons>
