--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -7,7 +7,7 @@
         <img src="img/main.png" class="main-png">
         <div class="buttons button-right">
           <div class="dh-relative" ng-controller="YourBalCtrl">
-            <button class="button button-icon ln-bell small-icon btn-view" ng-click="pullrefresh();"></button>
+            <button class="button button-icon ln-bell small-icon btn-view" ui-sref="app.notification"></button>
             <span class="badge badge-assertive btn-set span-abs" ng-hide="notificationCount==0"></span>
           </div>
             <button class="button button-icon ion-ios-loop-strong small-icon" ng-click="pullrefresh();"></button>
