--- a/www/templates/myproducts.html
+++ b/www/templates/myproducts.html
@@ -2,10 +2,10 @@
     <ion-nav-buttons side="right">
       <div class="buttons button-right">
         <div class="dh-relative" ng-controller="YourBalCtrl">
-          <button class="button button-icon ln-bell small-icon btn-view" ng-click="pullrefresh();"></button>
+          <button class="button button-icon ln-bell small-icon btn-view" ui-sref="app.notification"></button>
           <span class="badge badge-assertive btn-set span-abs" ng-hide="notificationCount==0"></span>
         </div>
-          
+
       </div>
         <button class="button button-icon ion-plus-round small-icon" ng-click="openedit();"></button>
     </ion-nav-buttons>
