--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -3,10 +3,10 @@
    <ion-nav-buttons side="right">
      <div class="buttons button-right">
        <div class="dh-relative" ng-controller="YourBalCtrl">
-         <button class="button button-icon ln-bell small-icon btn-view" ng-click="pullrefresh();"></button>
+         <button class="button button-icon ln-bell small-icon btn-view" ui-sref="app.notification"></button>
          <span class="badge badge-assertive btn-set span-abs" ng-hide="notificationCount==0"></span>
        </div>
-         
+
      </div>
 
       <a class="button button-icon ion-edit small-icon" ng-click="editpro(profile);" href="#/app/profile/edit"></a>
