--- a/www/templates/profile-edit.html
+++ b/www/templates/profile-edit.html
@@ -15,7 +15,7 @@
             <form name="shopp" ng-submit="profileupdate(profile);updatecat(profile.categoryid);updatearea(profile.areaid);">
                <div class="list">
                   <div class="profile-img">
-                     <img src="{{profile.shoplogo|serverimage}}">
+                     <img ng-src="{{profile.shoplogo|serverimage}}">
 
                      <div class="padding-horizontal text-center">
                         <button class="button button-balanced pr-button" ng-click="changeprofileimage()">Edit</button>
