--- a/www/templates/home-hotel.html
+++ b/www/templates/home-hotel.html
@@ -34,7 +34,7 @@
                 </label>
                 <label class="item item-input item-select">
                     <div class="input-label">
-                        Hotels
+                        Prefered Hotels
                     </div>
                     <select ng-model="hotel.hotelname" ng-class="allvalidation[2].validation">
                         <option value="">Select</option>
