--- a/www/templates/checkout.html
+++ b/www/templates/checkout.html
@@ -26,9 +26,11 @@
                     <span class="input-label">Contact no*</span>
                     <input class="text-right" type="tel" placeholder="Phone Number" maxlength="10" ng-model="form.personalcontact" ng-class="allvalidation[2].validation" required>
                 </div>
-                <div class="item item-input text-capitalize">
+                <div class="item text-capitalize">
                     <span class="input-label">Address*</span>
-                    <textarea class="text-right addresss form-addrs" ng-model="form.billingaddress" ng-class="allvalidation[3].validation" required></textarea>
+                  <div class="text-a">
+                      <textarea class="addresss form-addrs" ng-model="form.billingaddress" ng-class="allvalidation[3].validation" required rows="4" cols="50"></textarea>
+                  </div>
                 </div>
                 <div class="item item-input text-capitalize">
                     <span class="input-label">City*</span>
