--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -23,16 +23,16 @@
             <img ng-src="{{profile.shoplogo|serverimage}}">
             <h3>{{profile.shopname}}</h3>
          </div>
-         <div class="list profile-cont padtop5">
+         <div class="list profile-cont padtop5 font-lora-b">
             <ion-item class="">
-               <h2 class="font-bold">Category</h2>
+               <h2 class="font-bold font-lora-b">Category</h2>
 
                 <!-- <p>  </p> -->
                 <p class="down-paragraph">{{profile.category}}</p>
 
             </ion-item>
-            <div class="item item-text-wrap header">
-               <h2> Address</h2>
+            <div class="item item-text-wrap header font-lora-b">
+               <h2 class="font-lora-b"> Address</h2>
             </div>
             <div class="item item-text-wrap">
                <div class="input itemproducts">
@@ -40,31 +40,31 @@
                </div>
             </div>
             <ion-item class="item-left">
-               <h2>City</h2>
+               <h2 class="font-lora-b">City</h2>
                <div class="pull-right item-right text-capitalize">
                   {{profile.billingcity}}
                </div>
             </ion-item>
             <ion-item class="item-left">
-               <h2>Area</h2>
+               <h2 class="font-lora-b">Area</h2>
                <div class="pull-right item-right text-capitalize">
                   {{profile.area}}
                </div>
             </ion-item>
             <ion-item class="item-left">
-               <h2>State</h2>
+               <h2 class="font-lora-b">State</h2>
                <div class="pull-right item-right text-capitalize">
                   {{profile.billingstate}}
                </div>
             </ion-item>
             <ion-item class="item-left">
-               <h2>Pincode</h2>
+               <h2 class="font-lora-b">Pincode</h2>
                <div class="pull-right item-right text-capitalize">
                   {{profile.billingpincode}}
                </div>
             </ion-item>
             <div class="item item-text-wrap header">
-               <h2>Description</h2>
+               <h2 class="font-lora-b">Description</h2>
             </div>
             <div class="item item-text-wrap">
                <div class="input itemproducts">
@@ -72,13 +72,13 @@
                </div>
             </div>
             <ion-item class="item-left">
-               <h2>Cell Number</h2>
+               <h2 class="font-lora-b">Cell Number</h2>
                <div class="pull-right item-right">
                   {{profile.shopcontact1}}
                </div>
             </ion-item>
             <ion-item class="item-left">
-               <h2>Landline No.</h2>
+               <h2 class="font-lora-b">Landline No.</h2>
                <div class="pull-right item-right">
                   {{profile.shopcontact2}}
                </div>
@@ -91,20 +91,20 @@
                 </ion-item>
 -->
             <ion-item class="item-left">
-               <h2>Email Id</h2>
+               <h2 class="font-lora-b">Email Id</h2>
                <div class="pull-right item-right">
                   {{profile.shopemail}}
                </div>
             </ion-item>
             <ion-item class="item-left">
-               <h2>Website</h2>
+               <h2 class="font-lora-b">Website</h2>
                <div class="pull-right item-right">
                   {{profile.website}}
                </div>
             </ion-item>
             <div class="mt20">
                <div class="item item-text-wrap header" ng-if="pic.length>0">
-                  <h2>Shops Photos</h2>
+                  <h2 class="font-lora-b">Shops Photos</h2>
                </div>
                <div class="row">
                   <div class="col input-div" ng-repeat="p in pic" ng-click="openshop($index);">
@@ -115,7 +115,7 @@
             </div>
             <div class="mt20">
                <div class="item item-text-wrap header" ng-if="image.length>0">
-                  <h2>Products Photos</h2>
+                  <h2 class="font-lora-b">Products Photos</h2>
                </div>
                <div class="row">
                   <div class="col input-div" ng-repeat="i in image" ng-click="openpswds($index);">
@@ -125,7 +125,7 @@
                </div>
             </div>
             <div class="padding text-center p20">
-               <button class="button pr-button button-balanced" ng-click="openPassword();">Reset Password</button>
+               <button class="button pr-button button-balanced font-lora-b" ng-click="openPassword();">Reset Password</button>
             </div>
          </div>
       </div>
