--- a/www/templates/home-hotel.html
+++ b/www/templates/home-hotel.html
@@ -2,7 +2,7 @@
     <ion-nav-buttons side="right">
     </ion-nav-buttons>
     <ion-content class="padding">
-        <div class="incard  brdr-select">
+        <div class="incard brdr-select2">
             <div class="header-card">Find Hotels</div>
 
             <div class="list">
