--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -16,6 +16,7 @@ For example, you might change some of the default colors:
   used under CC BY http://creativecommons.org/licenses/by/4.0/
   Modified icons to fit ionicon’s grid from original.
 */
+@import url(www/css/style.css);
 @font-face {
   font-family: "Ionicons";
   src: url("../lib/ionic/fonts/ionicons.eot?v=2.0.1");
@@ -3328,7 +3329,7 @@ body,
   color: #363435;
   word-wrap: break-word;
   font-size: 14px;
-  font-family: "quicksand", "lora", "PT Sans", "Roboto", "Segoe UI", sans-serif;
+  font-family: "Lora";
   line-height: 20px;
   text-rendering: optimizeLegibility;
   -webkit-backface-visibility: hidden;
@@ -3566,7 +3567,7 @@ h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   color: #363435;
   font-weight: 500;
-  font-family: "quicksand", "lora", "PT Sans", "Roboto", "Segoe UI", sans-serif;
+  font-family: "Lora";
   line-height: 1.2; }
   h1 small, h2 small, h3 small, h4 small, h5 small, h6 small,
   .h1 small, .h2 small, .h3 small, .h4 small, .h5 small, .h6 small {
@@ -5052,7 +5053,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   white-space: nowrap;
   font-weight: 400;
   font-size: 14px;
-  font-family: "quicksand", "lora", "PT Sans", "Roboto", "Segoe UI", sans-serif;
+  font-family: "Lora";
   opacity: 0.7; }
   .tab-item:hover {
     cursor: pointer; }
@@ -6861,7 +6862,7 @@ input,
 button,
 select,
 textarea {
-  font-family: "quicksand", "lora", "PT Sans", "Roboto", "Segoe UI", sans-serif; }
+  font-family: "Lora"; }
 
 .item-input {
   display: -webkit-box;
@@ -9088,7 +9089,7 @@ body {
   font-weight: 600;
   padding: 13px 2px 13px 14px !important;
   color: #888;
-  font-family: 'quicksand';
+  font-family: "Lora";
   text-transform: uppercase; }
   .menu .list a i {
     font-size: 18px;
