--- a/www/templates/addproducts.html
+++ b/www/templates/addproducts.html
@@ -50,7 +50,7 @@
                         </select>
                     </label>
 -->
-               <div class="item item-toggle">
+               <div class="item item-toggle hide">
                   Status
                   <label class="toggle toggle-balanced">
                      <input type="checkbox" ng-model="ap.status">
