--- a/www/templates/productedit.html
+++ b/www/templates/productedit.html
@@ -36,7 +36,7 @@
                         <input type="text" placeholder="SKU" ng-model="prodetails.sku" class="text-right">
                     </div>
 -->
-               <div class="item item-toggle">
+               <div class="item item-toggle hide">
                   <span style="font-weight:bold;">Status</span>
                   <label class="toggle toggle-balanced">
                      <input type="checkbox" ng-model="prodetails.status">
