--- a/www/templates/home-hotel.html
+++ b/www/templates/home-hotel.html
@@ -9,7 +9,7 @@
 
                 <label class="item item-input item-select">
                     <div class="input-label">
-                        Country
+                        Country *
                     </div>
                     <select ng-model="hotel.country" ng-class="allvalidation[0].validation">
                         <option value="">Select</option>
@@ -22,7 +22,7 @@
                 </label>
                 <label class="item item-input hotel-city">
                     <div class="input-label">
-                        City
+                        City *
                     </div>
                     <!-- <select ng-model="hotel.city" ng-class="allvalidation[1].validation">
                         <option value="">Select</option>
@@ -34,7 +34,7 @@
                 </label>
                 <label class="item item-input item-select">
                     <div class="input-label">
-                        Prefered Hotels
+                        Prefered Hotels *
                     </div>
                     <select ng-model="hotel.hotelname" ng-class="allvalidation[2].validation">
                         <option value="">Select</option>
@@ -43,16 +43,16 @@
                     </select>
                 </label>
                 <label class="item item-input">
-                    <span class="input-label">Check in date</span>
+                    <span class="input-label">Check in date *</span>
                     <input type="date" ng-model="hotel.checkin" ng-class="allvalidation[3].validation" min="{{currentDate}}">
                 </label>
                 <label class="item item-input">
-                    <span class="input-label">Check out date</span>
+                    <span class="input-label">Check out date *</span>
                     <input type="date" ng-model="hotel.checkout" ng-class="allvalidation[4].validation" min="{{currentDate}}">
                 </label>
                 <label class="item item-input item-select">
                     <div class="input-label">
-                        Number of Rooms
+                        Number of Rooms *
                     </div>
                     <select ng-model="hotel.room" ng-class="allvalidation[5].validation">
                         <option value="">Select</option>
@@ -110,7 +110,7 @@
                 </label>
                 <label class="item item-input item-select">
                     <div class="input-label">
-                        Number of Adults
+                        Number of Adults *
                     </div>
                     <select ng-model="hotel.adult" ng-class="allvalidation[6].validation">
                         <option value="">Select</option>
@@ -218,9 +218,9 @@
                 </label>
                 <label class="item item-input item-select">
                     <div class="input-label">
-                        Number of Children
+                        Number of Children 
                     </div>
-                    <select ng-model="hotel.children" ng-class="allvalidation[7].validation">
+                    <select ng-model="hotel.children">
                         <option value="">Select</option>
                         <option value="0">0</option>
                         <option value="1">1</option>
