so many changes

--- a/www/templates/home-hotel.html
+++ b/www/templates/home-hotel.html
@@ -15,46 +15,65 @@
                         <option value="">Select</option>
 
                         <option value="India">India</option>
-                        <option value="New Zealand">New Zealand</option>
-                        <option value="Thailand">Thailand</option>
 
                     </select>
                 </label>
-                <label class="item item-input hotel-city">
-                    <div class="input-label">
-                        City *
-                    </div>
-                    <!-- <select ng-model="hotel.city" ng-class="allvalidation[1].validation">
-                        <option value="">Select</option>
-                        <option value="Mumbai">Mumbai</option>
-                        <option value="NaviMumbai">NaviMumbai</option>
-                        <option value="Thane">Thane</option>
-                    </select> -->
-                    <input type="text" ng-model="hotel.city" ng-class="allvalidation[1].validation">
-                </label>
+                <!-- <label class="item item-input hotel-city">
+<div class="input-label">
+    City *
+</div>
+<select ng-model="hotel.city" ng-class="allvalidation[1].validation">
+    <option value="">Select</option>
+    <option value="Mumbai">Mumbai</option>
+    <option value="NaviMumbai">NaviMumbai</option>
+    <option value="Thane">Thane</option>
+</select>
+<input type="text" ng-model="hotel.city" ng-class="allvalidation[1].validation">
+</label> -->
                 <label class="item item-input item-select">
                     <div class="input-label">
                         Prefered Hotels *
                     </div>
-                    <select ng-model="hotel.hotelname" ng-class="allvalidation[2].validation">
+                    <select ng-model="hotel.hotelname" ng-class="allvalidation[1].validation">
                         <option value="">Select</option>
-                        <option value="Taj">Taj</option>
-                        <option value="Oberoi">Oberoi</option>
+                        <option value="Indus valley resort:- Lonavala">Indus valley resort:- Lonavala</option>
+                        <option value="Mid way Park:- Shahpur">Mid way Park:- Shahpur</option>
+                        <option value="Coral Lake Resort:- Karjat">Coral Lake Resort:- Karjat</option>
+                        <option value="Lossapa Resort:- Karjat">Lossapa Resort:- Karjat</option>
+                        <option value="Hotel Ashwin:- Igatpuri">Hotel Ashwin:- Igatpuri</option>
+                        <option value="Mount Castle:- Panchgini">Mount Castle:- Panchgini</option>
+                        <option value="Gingertree beach resort:- Calangute (Goa)">Gingertree beach resort:- Calangute (Goa)</option>
+                        <option value="Goveia holiday homes:- Calangute (Goa)">Goveia holiday homes:- Calangute (Goa)</option>
+                        <option value="Ruffels beach Resort:- Calangute (Goa)">Ruffels beach Resort:- Calangute (Goa)</option>
+                        <option value="M.N.Resort:- Arpora baga rd. (Goa)">M.N.Resort:- Arpora baga rd. (Goa)</option>
+                        <option value="Sodder Group:- Baga (Goa)">Sodder Group:- Baga (Goa)</option>
+                        <option value="Donhill Resort:- Candolim (Goa)">Donhill Resort:- Candolim (Goa)</option>
+                        <option value="The Leoney Resort:- Anjuna (Goa)">The Leoney Resort:- Anjuna (Goa)</option>
+                        <option value="Riva Beach Resort:- Arambol (Goa)">Riva Beach Resort:- Arambol (Goa)</option>
+                        <option value="Annapurna vishramdham:- Baga (Goa)">Annapurna vishramdham:- Baga (Goa)</option>
+                        <option value="Castle House:- Calangute (Goa)">Castle House:- Calangute (Goa)</option>
+                        <option value="Snow valley Resort:- Manali">Snow valley Resort:- Manali</option>
+                        <option value="Camp Exotica:- Manali">Camp Exotica:- Manali</option>
+                        <option value="Snow valley Resort:- Shimla">Snow valley Resort:- Shimla</option>
+                        <option value="Country Inn & Spa:- Kovalam (Kerala)">Country Inn & Spa:- Kovalam (Kerala)</option>
+                        <option value="Beach & Lake:- Kovalam (Kerala)">Beach & Lake:- Kovalam (Kerala)</option>
+                        <option value="Sea Face:- Kovalam (Kerala)">Sea Face:- Kovalam (Kerala)</option>
+                        <option value="Holiday Vista:- Thhekkady (Kerala)">Holiday Vista:- Thhekkady (Kerala)</option>
                     </select>
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Check in date *</span>
-                    <input type="date" ng-model="hotel.checkin" ng-class="allvalidation[3].validation" min="{{currentDate}}">
+                    <input type="date" ng-model="hotel.checkin" ng-class="allvalidation[2].validation" min="{{currentDate}}">
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Check out date *</span>
-                    <input type="date" ng-model="hotel.checkout" ng-class="allvalidation[4].validation" min="{{currentDate}}">
+                    <input type="date" ng-model="hotel.checkout" ng-class="allvalidation[3].validation" min="{{currentDate}}">
                 </label>
                 <label class="item item-input item-select">
                     <div class="input-label">
                         Number of Rooms *
                     </div>
-                    <select ng-model="hotel.room" ng-class="allvalidation[5].validation">
+                    <select ng-model="hotel.room" ng-class="allvalidation[4].validation">
                         <option value="">Select</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
@@ -112,7 +131,7 @@
                     <div class="input-label">
                         Number of Adults *
                     </div>
-                    <select ng-model="hotel.adult" ng-class="allvalidation[6].validation">
+                    <select ng-model="hotel.adult" ng-class="allvalidation[5].validation">
                         <option value="">Select</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
@@ -218,7 +237,7 @@
                 </label>
                 <label class="item item-input item-select">
                     <div class="input-label">
-                        Number of Children 
+                        Number of Children
                     </div>
                     <select ng-model="hotel.children">
                         <option value="">Select</option>
