--- a/www/templates/home-offline.html
+++ b/www/templates/home-offline.html
@@ -13,7 +13,7 @@
 
         <div class="incard brdr-select">
             <div class="header-card">Find Shops</div>
-            <label class="item item-input item-select area">
+            <label class="item item-input item-select area hide">
                 <div class="input-label">
                     City
                 </div>
@@ -25,7 +25,7 @@
 
             <label class="item item-input item-select area">
                 <div class="input-label">
-                    Area
+                    City
                 </div>
                 <select ng-model="home.area">
                     <option value="">All</option>
