--- a/www/templates/home-online.html
+++ b/www/templates/home-online.html
@@ -18,7 +18,7 @@
             <div>
                 <label class="item item-input item-select area">
                     <div class="input-label">
-                        Area
+                        City
                     </div>
                     <select ng-model="home.area">
                         <option value="">Mumbai</option>
